--- a/gradle.properties
+++ b/gradle.properties
@@ -1,12 +1,12 @@
-org.gradle.jvmargs=-Xmx1G
+org.gradle.jvmargs=-Xmx2G
 
 # Fabric Properties (https://fabricmc.net/develop)
-minecraft_version=1.18.2
-yarn_mappings=1.18.2+build.3
-loader_version=0.13.3
-fabric_version=0.50.0+1.18.2
+minecraft_version=1.19
+yarn_mappings=1.19+build.4
+loader_version=0.14.8
+fabric_version=0.56.0+1.19
 
 # Mod Properties
-mod_version=0.1.1
-maven_group=io.github.theRookieCoder
+mod_version=0.1.2
+maven_group=io.github.therookiecoder
 archives_base_name=snowyleavesplus
