--- a/build.gradle
+++ b/build.gradle
@@ -19,7 +19,7 @@ processResources {
     inputs.property "version", project.version
     filteringCharset "UTF-8"
 
-    filesMatching("fabric.mod.json") {
+    filesMatching("*.mod.json") {
         expand "version": project.version
     }
 }
