Add Minecraft version to output JAR, and switch `fabric` dependency to `fabric-api`

--- a/build.gradle
+++ b/build.gradle
@@ -37,7 +37,7 @@ java {
     if (JavaVersion.current() < javaVersion) {
         toolchain.languageVersion = JavaLanguageVersion.of(targetJavaVersion)
     }
-    archivesBaseName = project.archives_base_name
+    archivesBaseName = "${project.archives_base_name}-mc${project.minecraft_version}"
     withSourcesJar()
 }
 
