--- a/gradle.properties
+++ b/gradle.properties
@@ -1,10 +1,10 @@
 org.gradle.jvmargs=-Xmx2G
 
 # Fabric Properties (https://fabricmc.net/develop)
-minecraft_version=1.19.4-pre3
-yarn_mappings=1.19.4-pre3+build.1
+minecraft_version=1.19.4
+yarn_mappings=1.19.4+build.1
 loader_version=0.14.17
-fabric_version=0.75.2+1.19.4
+fabric_version=0.75.3+1.19.4
 
 # Mod Properties
 mod_version=0.1.5
