--- a/src/main/resources/snowyleavesplus.mixins.json
+++ b/src/main/resources/snowyleavesplus.mixins.json
@@ -3,7 +3,7 @@
   "minVersion": "0.8",
   "package": "io.github.therookiecoder.snowyleavesplus.mixin",
   "compatibilityLevel": "JAVA_17",
-  "client": [
+  "mixins": [
     "BlockInvoker",
     "LeavesBlockMixin"
   ],
