--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,5 @@
 plugins {
-    id 'fabric-loom' version '1.1-SNAPSHOT'
+    id 'fabric-loom' version '1.2-SNAPSHOT'
     id 'com.modrinth.minotaur' version '2.7.+'
     id 'com.matthewprenger.cursegradle' version '1.4.+'
 }
@@ -50,7 +50,7 @@ modrinth {
     uploadFile = remapJar
     versionType = "beta"
     loaders = ["fabric", "quilt"]
-    gameVersions = ["1.19.4"]
+    gameVersions = ["1.19.4", "1.20"]
     syncBodyFrom = rootProject.file("README.md").text
     dependencies = [new ModDependency("fabric-api", "required")]
 }
@@ -63,6 +63,7 @@ curseforge {
         addGameVersion("Fabric")
         addGameVersion("Quilt")
         addGameVersion("1.19.4")
+        addGameVersion("1.20")
         mainArtifact(remapJar) {
             displayName = "SnowyLeavesPlus ${version} for Minecraft ${project.minecraft_version}"
         }
