--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,6 @@
 plugins {
-    id 'fabric-loom' version '1.2-SNAPSHOT'
-    id 'com.modrinth.minotaur' version '2.7.+'
+    id 'fabric-loom' version '1.3-SNAPSHOT'
+    id 'com.modrinth.minotaur' version '2.8.+'
     id 'com.matthewprenger.cursegradle' version '1.4.+'
 }
 
@@ -50,7 +50,7 @@ modrinth {
     uploadFile = remapJar
     versionType = "beta"
     loaders = ["fabric", "quilt"]
-    gameVersions = ["1.19.4", "1.20"]
+    gameVersions = ["1.19.4", "1.20", "1.20.1"]
     syncBodyFrom = rootProject.file("README.md").text
     dependencies = [new ModDependency("fabric-api", "required")]
 }
@@ -64,6 +64,7 @@ curseforge {
         addGameVersion("Quilt")
         addGameVersion("1.19.4")
         addGameVersion("1.20")
+        addGameVersion("1.20.1")
         mainArtifact(remapJar) {
             displayName = "SnowyLeavesPlus ${version} for Minecraft ${project.minecraft_version}"
         }
