--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,5 @@
 plugins {
-    id 'fabric-loom' version '1.3-SNAPSHOT'
+    id 'fabric-loom' version '1.4-SNAPSHOT'
     id 'com.modrinth.minotaur' version '2.8.+'
     id 'com.matthewprenger.cursegradle' version '1.4.+'
 }
@@ -50,7 +50,7 @@ modrinth {
     uploadFile = remapJar
     versionType = "beta"
     loaders = ["fabric", "quilt"]
-    gameVersions = ["1.19.4", "1.20", "1.20.1", "1.20.2"]
+    gameVersions = ["1.19.4", "1.20", "1.20.1", "1.20.2", "1.20.3", "1.20.4"]
     syncBodyFrom = rootProject.file("README.md").text
     dependencies = [new ModDependency("fabric-api", "required")]
 }
@@ -66,6 +66,8 @@ curseforge {
         addGameVersion("1.20")
         addGameVersion("1.20.1")
         addGameVersion("1.20.2")
+        addGameVersion("1.20.3")
+        addGameVersion("1.20.4")
         mainArtifact(remapJar) {
             displayName = "SnowyLeavesPlus ${version} for Minecraft ${project.minecraft_version}"
         }
