--- a/gradle.properties
+++ b/gradle.properties
@@ -1,12 +1,12 @@
 org.gradle.jvmargs=-Xmx2G
 
 # Fabric Properties (https://fabricmc.net/develop)
-minecraft_version=1.21-pre4
-yarn_mappings=1.21-pre4+build.3
+minecraft_version=1.21
+yarn_mappings=1.21+build.2
 loader_version=0.15.11
-fabric_version=0.100.0+1.21
+fabric_version=0.100.1+1.21
 
 # Mod Properties
-mod_version=0.1.11
+mod_version=0.1.12
 maven_group=io.github.therookiecoder
 archives_base_name=snowyleavesplus
