--- a/settings.gradle
+++ b/settings.gradle
@@ -1,9 +1,13 @@
 pluginManagement {
     repositories {
+        gradlePluginPortal()
         maven {
             name = 'Fabric'
             url = 'https://maven.fabricmc.net/'
         }
-        gradlePluginPortal()
+        maven {
+            name = 'First Dark'
+            url "https://maven.firstdark.dev/releases"
+        }
     }
 }
