--- a/gradle.properties
+++ b/gradle.properties
@@ -1,12 +1,14 @@
 org.gradle.jvmargs=-Xmx2G
 
 # Fabric Properties (https://fabricmc.net/develop)
-minecraft_version=1.21.4
-yarn_mappings=1.21.4+build.2
-loader_version=0.16.9
-fabric_version=0.112.1+1.21.4
+minecraft_version=1.21.6
+yarn_mappings=1.21.6+build.1
+loader_version=0.16.14
+loom_version=1.10-SNAPSHOT
+
+fabric_version=0.128.1+1.21.6
 
 # Mod Properties
-mod_version=0.1.13
+mod_version=0.1.14
 maven_group=io.github.therookiecoder
 archives_base_name=snowyleavesplus
