--- a/build.gradle
+++ b/build.gradle
@@ -39,12 +39,12 @@ java {
 
 publisher {
     apiKeys {
-        modrinth System.getenv("MODRINTH_TOKEN")
+        modrinth System.getenv("MODRINTH_UPLOAD_TOKEN")
         curseforge System.getenv("CURSEFORGE_TOKEN")
         github System.getenv("GITHUB_TOKEN")
     }
     setDebug(true)
-    changelog = "Update to `1.21.6`"
+    changelog = "Update to `1.21.9`"
 
     setCurseID("611998")
     setModrinthID("of7wIinq")
@@ -54,6 +54,9 @@ publisher {
     setVersionType("beta")
 
     setLoaders("fabric", "quilt")
+    setGameVersions("1.21.9")
+    setGameVersions("1.21.8")
+    setGameVersions("1.21.7")
     setGameVersions("1.21.6")
     setGameVersions("1.21.5")
 
